<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
        android:background="@drawable/bg_main">
    <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
	        android:gravity="center_vertical"
	        android:background="@drawable/navigation_btn_normal">
        <ImageButton android:id="@+id/media_btn_back"
                     android:layout_width="0dp"
		             android:layout_height="fill_parent"
                     android:layout_weight="1"
		             android:background="@drawable/navigation_btn"
                     android:src="@drawable/audio_player_back"/>
        <TextView android:id="@+id/media_tv_head"
                  android:layout_height="fill_parent"
                  android:layout_width="0dp"
                  android:layout_weight="4"
                  android:text="@string/media_player_head"
                  android:textSize="20dp"
                  android:gravity="center"
		  android:textColor="#000000"/>
        <ImageButton android:id="@+id/media_btn_video"
                     android:layout_width="0dp"
                     android:layout_weight="1"
                     android:layout_height="wrap_content"
		             android:background="@drawable/navigation_btn"
                     android:src="@drawable/audio_play_video"/>
    </LinearLayout>
    <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="vertical">
        <TextView android:id="@+id/media_tv_title"
                  android:layout_width="fill_parent"
                  android:layout_height="wrap_content"
		  android:layout_marginTop="30dp"
            	  android:layout_marginLeft="30dp"
            	  android:layout_marginRight="30dp"
        	      android:textAlignment="center"
            	  android:textColor="#000000"
            	  android:textSize="18sp"
                  android:singleLine="true"
                  android:scrollHorizontally="true"
                  android:ellipsize="marquee"
                  android:marqueeRepeatLimit="marquee_forever"/>
        <TextView android:id="@+id/media_tv_content"
                  android:layout_width="fill_parent"
                  android:layout_height="0dp"
                  android:layout_weight="1"
		  android:layout_marginTop="50dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
        	android:textAlignment="center"
            android:background="@drawable/live_content"
            android:textColor="#000000"/>
    </LinearLayout>
    <LinearLayout android:layout_width="fill_parent"
                  android:layout_height="wrap_content"
                  android:gravity="center_horizontal"
                  android:layout_marginBottom="30dp"
		          android:layout_marginTop="30dp">
        <Button
                android:id="@+id/media_btn_dial_1"
                android:layout_width="120dp"
                android:layout_height="35dp"
                android:layout_marginRight="10dp"
                android:textSize="16dp"
                android:textColor="@color/white"
                android:text="@string/media_player_hotline_1"
		        android:background="@drawable/hotline_btn"
                android:drawableLeft="@drawable/hotline"/>
        <Button
                android:id="@+id/media_btn_dial_2"
                android:layout_width="120dp"
                android:layout_height="35dp"
                android:layout_marginLeft="10dp"
		        android:background="@drawable/hotline_btn"
                android:textSize="16dp"
            	android:textColor="@color/white"
                android:drawableLeft="@drawable/hotline"
                android:text="@string/media_player_hotline_2"/>
    </LinearLayout>
    <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
		    android:layout_marginBottom="30dp">
        <TextView
                android:id="@+id/media_player_time_current"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="5dp"/>
        <TextView
                android:id="@+id/media_player_time_total"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="5dp"/>
        <SeekBar
                android:id="@+id/media_player_audio_seekbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxHeight="4dp"
                android:layout_centerVertical="true"
                android:layout_toLeftOf="@id/media_player_time_total"
                android:layout_toRightOf="@id/media_player_time_current"
                android:focusable="false"
                android:progressDrawable="@drawable/seekbar_style"
                android:thumb="@drawable/seek_up"
                android:max="1000"/>
    </RelativeLayout>
    <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
	    android:layout_marginBottom="30dp">
        <LinearLayout android:layout_width="0dp"
                      android:layout_height="fill_parent"
                      android:layout_weight="1"
                      android:gravity="center"
                      android:orientation="vertical">
            <ImageButton android:id="@+id/media_btn_ask"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_gravity="center_horizontal"
			             android:background="@color/transparent"
                         android:src="@drawable/audio_player_ask"/>
            <TextView android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:layout_marginTop="5dp"
                      android:text="@string/media_player_ask"
                      android:textColor="@color/white"/>
        </LinearLayout>
        <LinearLayout android:layout_width="0dp"
                      android:layout_height="fill_parent"
                      android:layout_weight="1"
                      android:gravity="center"
                      android:orientation="vertical">
            <ImageButton android:id="@+id/media_btn_play"
                         android:layout_width="60dp"
                         android:layout_height="60dp"
                         android:background="@color/transparent"
                         android:src="@drawable/audio_player_play"/>
            <ProgressBar
                    android:id="@+id/probar"
                    style="?android:attr/progressBarStyleLarge"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:visibility="gone"/>
            <TextView android:id="@+id/media_tv_player_status"
                      android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:layout_marginTop="5dp"
                      android:text="@string/media_status_paused"
                      android:textColor="@color/white"/>
        </LinearLayout>
        <LinearLayout android:layout_width="0dp"
                      android:layout_height="fill_parent"
                      android:layout_weight="1"
                      android:gravity="center"
                      android:orientation="vertical">
            <ImageButton android:id="@+id/media_btn_share"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_gravity="center_horizontal"
			             android:background="@color/transparent"
                         android:src="@drawable/audio_player_share"/>
            <TextView android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:layout_marginTop="5dp"
                      android:text="@string/media_player_share"
                      android:textColor="@color/white"/>
        </LinearLayout>

    </LinearLayout>
</LinearLayout>